# sct

./: .buildinfo  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  changelog.html  genindex.html  index.html  install.html  noxfile.py  objects.inv  pdm.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  zensical.toml
.doctrees/: changelog.doctree  index.doctree  install.doctree
.doctrees/reference/api/: analyses.doctree  configuration.doctree  core.doctree  index.doctree  io.doctree  web_scraping.doctree
.doctrees/user_manual/: analyses.doctree  automatic_mode.doctree  command_line_side_utilities.doctree  command_line_tool.doctree  configuration.doctree  index.doctree  point_target_file.doctree  pta_corrections.doctree  supported_missions.doctree  tutorials.doctree
.github/workflows/: sct.yml  sphinx_docs.yml
.gitlab/ci/: conda-forge-update.sh  dashboard-copy.sh
_static/: documentation_options.js
calibration_sites_db/: calibration_sites.sqlite
calibration_sites_db/database_generation/: calibration_targets_old_sct.xlsx  undefined.erdplus
conda_recipe/: meta.yaml
corner_reflectors_datasets/: argentina.csv  envisat_transponders_dataset.csv  neusterlitz_corner_reflectors_data.csv  rosamond_corner_reflectors_data.csv  surat_basin_corner_reflectors_data.csv  surat_basin_corner_reflectors_data.geojson
docs/: format_plugins.md  index.md  install.md  missions.md
docs/API/: changelog.md
docs/API/reference/: cli.md  config.md  core.md  index.md  io.md  plugins.md  testing.md  web.md
docs/about/: build.template.md
docs/developers-area/: create_analysis.md  create_plugin.md  overview.md
docs/documentation/: point_targets.md
docs/documentation/CLI/: cli_utilities.md  config.md  index.md
docs/documentation/analyses/: index.md
docs/source/: changelog.rst  conf.py  index.rst  install.rst
docs/source/dev_manual/: create_analysis.rst  create_plugin.rst  index.rst
docs/source/documentation/: cli.rst  cli_side_utilities.rst  (+5 more)
documentation/: new_sct_status_update.pptx  sct_diagram.drawio  sct_plugins.drawio  sct_plugins_design.drawio
end_to_end_tests/: run_sct_e2e_tests.py  sct_e2e_tests_instructions.txt  test_registry.json
notebooks/: localization.py  radiometry.py
overrides/stylesheets/: extra.css
reference/api/: analyses.html  configuration.html  core.html  index.html  io.html  web_scraping.html
scripts/: convert_internal_pt_sources.py  known_calibration_sites_registry.json  local_registry.json  point_target_analysis_scripts.py  test_config.py  test_interferometric_analysis.py  test_plugin.py  test_point_target_analysis.py  test_ptar_analysis.py  test_radiometric_analysis.py  test_safe_reader.py  test_spectral_analysis.py  test_testing.py
sct/: __init__.py  __main__.py
sct/analyses/: __init__.py  ambiguity_ratio_analysis.py  automatic_analyses.py  graphical_output.py  interferometric_analysis.py  nesz_analysis.py  point_target_analysis.py  radiometric_analysis.py  spectral_analysis.py
sct/cli/: __init__.py  common.py  int_cli.py  nesz_cli.py  pta_cli.py  ra_cli.py  sa_cli.py  sct_cli.py  tar_cli.py  utility_commands_cli.py
sct/configuration/: logger.py  point_target_analysis_configuration.py  sct_configuration.py  sct_default_configuration.py
sct/core/: __init__.py  atmospheric_corrections_core.py  atmospheric_corrections_main.py  etad_corrections_main.py  geodynamics_corrections_core.py  geodynamics_corrections_main.py  global_corrections.py  rcs.py  rcs_computation.py
sct/io/: __init__.py  extended_protocols.py  input_product_plugins.py  io_manager.py  io_support.py  plugins_utils.py  point_target_manager.py  quality_input_from_aresys_product.py  quality_input_from_asar_product.py  quality_input_from_cosmo_product.py  quality_input_from_eos04_product.py  quality_input_from_iceye_product.py  quality_input_from_novasar1_product.py  quality_input_from_radarsat2_product.py  quality_input_from_safe_product.py  quality_input_from_saocom_product.py  quality_input_from_sentinel1_product.py  safe_computing_utilities.py
sct/resources/: __init__.py  calibration_targets_exernal_source_template.csv  calibration_targets_external_source_template.csv  configuration_schema.json  known_calibration_sites_registry.json  known_calibration_sites_registry_schema.json  sct_config_template.toml
sct/testing/: __init__.py  run.py  utilities.py
sct/web_scraping/: __init__.py  _utilities.py  cddis_downloader.py  ionosphere_tec_map_downloader.py  rosamond_corner_reflector_downloader.py  troposphere_maps_downloader.py
src/sct/: __init__.py  __main__.py  orchestration.py
tests/: __init__.py  test_main.py  test_product_wrapper_compliance.py  test_rcs.py  test_safe_product_wrapper.py  test_sct_configuration.py
tests/analyses/: test_automatic_analyses.py  test_point_target_analysis.py
tests/cli/: __init__.py  test_pta_cli.py  test_ra_cli.py  test_sct_cli.py  test_utility_commands_cli.py
tests/configuration/: test_sct_configuration.py
tests/core/: __init__.py  test_atmospheric_corrections_main.py  test_etad_corrections_main.py  test_geodynamics_corrections_main.py  test_rcs_computation.py
tests/integration_tests/: _create_local_dataset.py  generate_dataset_cli.py  test_registry.json  test_registry_linux.json  test_registry_windows.json
tests/io_/: __init__.py  adapters_tester.py  mock_product.py  test_io_support.py  test_quality_input_from_aresys_product.py  test_quality_input_from_asar_product.py  test_quality_input_from_cosmo_product.py  test_quality_input_from_eos04_product.py  test_quality_input_from_iceye_product.py  test_quality_input_from_novasar_product.py  test_quality_input_from_radarsat_product.py  test_quality_input_from_saocom_product.py  test_quality_input_from_sentinel1_product.py
tests/unittest/: __init__.py
tests/web_scraping/: __init__.py  test_utilities.py
user_manual/: analyses.html  automatic_mode.html  command_line_side_utilities.html  command_line_tool.html  configuration.html  index.html  point_target_file.html  pta_corrections.html  supported_missions.html  tutorials.html
(+265 files in other folders)
