[project]
name = "sct"
description = "SCT (SAR Calibration Toolbox) is the Aresys Python module for SAR products quality analysis."
authors = [{ name = "Aresys S.R.L.", email = "info@aresys.it" }]
requires-python = ">= 3.11"
readme = "README.md"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "jsonschema",
    "toml",
    "shapely",
    "art",
    "arepytools >= 1.7.2",
    "perseo-quality>=1.0.9",
    "perseo-perturbations",
    "numba>=0.61",
    "click"
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.scripts]
sct = "sct.__main__:main"
sct-rosamond-data-to-csv = "sct.cli.utility_commands_cli:convert_rosamond_csv"
sct-ionospheric-maps-download = "sct.cli.utility_commands_cli:download_ionex_tec_maps"
sct-tropospheric-maps-download = "sct.cli.utility_commands_cli:download_tropospheric_vmf3_maps"
sct-testing = "sct.testing.cli:integration_testing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sct/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "docs"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
web = ["requests"]
graphs = ["matplotlib >= 3.5", "perseo-quality[graphs]"]
dev = ["nox", "ruff", "pylint"]
test = ["unittest-xml-reporting", "coverage"]
localtesting = ["sct_aresys_reader", "sct_sentinel1_reader"]
doc = [
    "ipython",
    "nbsphinx",
    "sphinx",
    "sphinx-design",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]

[tool.ruff]
line-length = 120
output-format = "grouped"
extend-exclude = [".venv", "notebooks", "scripts", "docs"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "A", "B", "I"]

[tool.pylint.master]
fail-under = 8.5
fail-on = ["unused-import"]

[tool.pylint.message_control]
disable = ["import-error", "logging-fstring-interpolation", "logging-not-lazy"]

[tool.pylint.format]
max-line-length = 120

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format_check = "ruff format --check"
format = "ruff format"
sort = "ruff check --select I --fix-only"
lint_check = "ruff check"
lint_fix = "ruff check --show-fixes --fix-only"
test = "python -m unittest discover -s ./tests -p test_*.py"
clean_doc = "python -m sphinx -M clean docs/source {args}"
build_doc = "python -m sphinx -b html docs/source {args}"
check_code = { composite = ["format_check", "lint_check"] }
fix_format = { composite = ["format", "sort", "lint_fix"] }
