[project]
name = "sct"
description = "SCT (SAR Calibration Toolbox) is the Aresys Python module for SAR products quality analysis."
authors = [{ name = "Aresys S.R.L.", email = "info@aresys.it" }]
requires-python = ">= 3.11"
readme = "README.md"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "jsonschema",
    "toml",
    "shapely",
    "art",
    "arepytools>=1.7.2",
    "perseo-quality>=1.0.12",
    "perseo-perturbations",
    "numba>=0.61",
    "typer>=0.24.1",
    "stevedore>=5.7.0",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.scripts]
sct = "sct.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sct/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "docs"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
web = ["requests"]
graphs = ["matplotlib>=3.5", "perseo-quality[graphs]"]
dev = ["nox", "ruff", "pylint"]
test = ["pytest>8.0.0", "pytest-cov>7.0.0", "pytest-mock>3.15.0"]
localtesting = ["sct_aresys_reader", "sct_sentinel1_reader"]
doc = ["zensical", "mkdocstrings-python"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=sct",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--no-cov-on-fail",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 120
output-format = "grouped"
extend-exclude = [".venv", "notebooks", "scripts", "docs"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "W", "F", "A", "B", "I"]
ignore = ["B008"]

[tool.pylint.master]
fail-under = 8.5
fail-on = ["unused-import"]

[tool.pylint.message_control]
disable = ["import-error", "logging-fstring-interpolation", "logging-not-lazy"]

[tool.pylint.format]
max-line-length = 120

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format_check = "ruff format --check"
format = "ruff format"
sort = "ruff check --select I --fix-only"
lint_check = "ruff check"
lint_fix = "ruff check --show-fixes --fix-only"
test = "python -m pytest ./tests -v"
build_doc = "python -m zensical build"
check_code = { composite = ["format_check", "lint_check"] }
fix_format = { composite = ["format", "sort", "lint_fix"] }
